tests/ui/coercion/coerce-block-tail-26978.stderr
error[E0308]: mismatched types
  --> $DIR/coerce-block-tail-26978.rs:9:9
   |
LL |     f(&{x});
   |         ^ expected `i32`, found `Box<i32>`
   |
   = note: expected type `i32`
            found struct `Box<i32>`
help: consider unboxing the value
   |
LL |     f(&{*x});
   |         +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
